# jsoncdc

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  META.json  Makefile  README.md  build.rs  fixture.sql  generate_bindings.sh  jsoncdc.control  rustfmt.toml  travis
doc/: jsoncdc.md
elephantpump-sys/: Cargo.toml  build.rs
elephantpump-sys/src/: build.rs  lib.rs
licenses/: apache
sql/: jsoncdc.sql  uninstall_jsoncdc.sql
src/: build.rs  lib.rs  libpq.rs  magic.c  main.rs  pg.rs  pg94.rs  pg95.rs  remove_duplicate_single_line_statements.py
test/expected/: base.out  escaping.out  message.out  text.out  toast.out  tricky.out
test/sql/: base.sql  bigdata.sql  escaping.sql  message.sql  text.sql  toast.sql  tricky.sql
util/: checkstyle  docker  generate_bindings  get_version  travis  travis_linux  travis_osx
