[package]
name = "jsoncdc"
version = "0.0.9"
authors = ["Alex Newman <posi@planet.com>",
           "Jason Dusek <jason.dusek@gmail.com>"]
build = "build.rs"


[lib]
name = "jsoncdc"
crate-type = ["dylib"]

[dependencies]
libc = "*"
rpgffi = "0.1.1"

[dev-dependencies]
rustfmt = "*"

[build-dependencies]
gcc = "*"
