[package]
name = "jsoncdc"
version = "0.0.11"
authors = ["Alex Newman <posi@planet.com>",
           "Jason Dusek <jason.dusek@gmail.com>"]
build = "build.rs"


[lib]
name = "jsoncdc"
crate-type = ["dylib"]

[dependencies]
libc = "*"
base64 = "*"
rpgffi = "0.1.1"
serde_json = "1.*"

[dev-dependencies]
rustfmt = "*"

[build-dependencies]
gcc = "*"
